<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00ffc7"
    tools:context="com.example.android.senseiscommon.MainActivity">

    <RelativeLayout
        android:id="@+id/parent_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:id="@+id/your_name_LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="#f3a6ff"
            android:layout_margin="4dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/your_name"
                android:textAppearance="?android:textAppearanceLarge"
                android:gravity="center"/>
            <EditText
                android:id="@+id/your_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3.5"
                android:hint="@string/your_name_hint"
                android:inputType="textCapWords"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/start_quiz_LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/your_name_LinearLayout"
            android:orientation="vertical">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="fitCenter"
                android:src="@drawable/bean_common_sense"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/heading1"
                android:gravity="center"
                android:textColor="#dc00ff"
                android:textStyle="bold"
                android:textAppearance="?android:textAppearanceLarge"
                android:layout_margin="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/subHeading1"
                android:gravity="center"
                android:textColor="#dc00ff"
                android:textAppearance="?android:textAppearanceSmall"
                android:layout_margin="4dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/start_quiz_LinearLayout"
            android:layout_centerHorizontal="true"
            android:text="@string/start"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_margin="16dp"
            android:textColor="#ffffff"
            android:background="#ea65ff"
            android:padding="16dp"
            android:visibility="visible"
            android:onClick="startQuiz"/>

        <LinearLayout
            android:id="@+id/question_answer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/start_quiz_LinearLayout"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:visibility="invisible"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text=""
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#ef0000" />
            <RadioGroup
                android:id="@+id/answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp">
                <RadioButton
                    android:id="@+id/op1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:textColor="#0000ff"
                    android:onClick="checkRB"/>
                <RadioButton
                    android:id="@+id/op2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:textColor="#0000ff"
                    android:onClick="checkRB"/>
                <RadioButton
                    android:id="@+id/op3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:textColor="#0000ff"
                    android:onClick="checkRB"/>
                <RadioButton
                    android:id="@+id/op4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:textColor="#0000ff"
                    android:onClick="checkRB"/>
                <RadioButton
                    android:id="@+id/op5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:textColor="#0000ff"
                    android:onClick="checkRB"/>
            </RadioGroup>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submitButton"
                android:textStyle="bold"
                android:layout_gravity="center|bottom"
                android:visibility="visible"
                android:layout_margin="8dp"
                android:padding="4dp"
                android:textColor="#fdf8f8"
                android:backgroundTint="#ff6767"
                android:onClick="submitAns"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_below="@id/start_quiz_LinearLayout"
            android:visibility="invisible"
            android:layout_margin="8dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result"
                android:textColor="#0000ff"/>
            <ImageView
                android:id="@+id/result_image"
                android:layout_width="300dp"
                android:layout_height="150dp"
                android:scaleType="fitCenter"/>
            <TextView
                android:id="@+id/summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#009700"
                android:gravity="center"
                android:textAppearance="?android:textAppearanceMedium"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textColor="#ffffff"
                android:background="#ea65ff"
                android:padding="16dp"
                android:text="@string/reset"
                android:textStyle="bold"
                android:onClick="reset"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>